--- a/Performer/ONEOONE/Golfsamsung/Golfsamsung_Reservation.xaml
+++ b/Performer/ONEOONE/Golfsamsung/Golfsamsung_Reservation.xaml
@@ -231,7 +231,7 @@
                             </ui:Target>
                           </ui:FindText.Target>
                         </ui:FindText>
-                        <ui:Click AlterIfDisabled="{x:Null}" DelayBefore="{x:Null}" DelayMS="{x:Null}" SendWindowMessages="{x:Null}" SimulateClick="{x:Null}" ClickType="CLICK_SINGLE" sap:VirtualizedContainerService.HintSize="896,68.8" sap2010:WorkflowViewState.IdRef="Click_5" KeyModifiers="None" MouseButton="BTN_LEFT">
+                        <ui:Click AlterIfDisabled="{x:Null}" DelayBefore="{x:Null}" SendWindowMessages="{x:Null}" SimulateClick="{x:Null}" ClickType="CLICK_SINGLE" DelayMS="2000" sap:VirtualizedContainerService.HintSize="896,68.8" sap2010:WorkflowViewState.IdRef="Click_5" KeyModifiers="None" MouseButton="BTN_LEFT">
                           <ui:Click.CursorPosition>
                             <ui:CursorPosition OffsetX="4" OffsetY="14" Position="BottomLeft" />
                           </ui:Click.CursorPosition>
